@@ -1,42 +1,90 @@
 package com.dpw.runner.shipment.services.service.impl;
 
 
+import static com.dpw.runner.shipment.services.commons.constants.Constants.AIR_FACTOR_FOR_VOL_WT;
 import static com.dpw.runner.shipment.services.commons.constants.Constants.CONSOLIDATION;
 import static com.dpw.runner.shipment.services.commons.constants.Constants.DIRECTION_CTS;
 import static com.dpw.runner.shipment.services.commons.constants.Constants.DIRECTION_IMP;
 import static com.dpw.runner.shipment.services.commons.constants.Constants.IMPORT_SHIPMENT_PULL_ATTACHMENT_EMAIL;
+import static com.dpw.runner.shipment.services.commons.constants.Constants.ROAD_FACTOR_FOR_VOL_WT;
 import static com.dpw.runner.shipment.services.commons.constants.Constants.SHIPMENT;
 import static com.dpw.runner.shipment.services.entity.enums.ShipmentRequestedType.APPROVE;
 import static com.dpw.runner.shipment.services.entity.enums.ShipmentRequestedType.SHIPMENT_PULL_REQUESTED;
 import static com.dpw.runner.shipment.services.helpers.DbAccessHelper.fetchData;
+import static com.dpw.runner.shipment.services.utils.CommonUtils.IsStringNullOrEmpty;
 import static com.dpw.runner.shipment.services.utils.CommonUtils.andCriteria;
 import static com.dpw.runner.shipment.services.utils.CommonUtils.constructListCommonRequest;
+import static com.dpw.runner.shipment.services.utils.CommonUtils.listIsNullOrEmpty;
+import static com.dpw.runner.shipment.services.utils.UnitConversionUtility.convertUnit;
+import static java.util.stream.Collectors.toMap;
 
+import com.dpw.runner.shipment.services.ReportingService.Models.TenantModel;
+import com.dpw.runner.shipment.services.ReportingService.Reports.IReport;
+import com.dpw.runner.shipment.services.adapters.interfaces.ITrackingServiceAdapter;
+import com.dpw.runner.shipment.services.aspects.MultitenancyAspect.TenantContext;
 import com.dpw.runner.shipment.services.aspects.MultitenancyAspect.UserContext;
 import com.dpw.runner.shipment.services.commons.constants.AwbConstants;
+import com.dpw.runner.shipment.services.commons.constants.CacheConstants;
+import com.dpw.runner.shipment.services.commons.constants.ConsolidationConstants;
 import com.dpw.runner.shipment.services.commons.constants.Constants;
 import com.dpw.runner.shipment.services.commons.constants.DaoConstants;
+import com.dpw.runner.shipment.services.commons.constants.EntityTransferConstants;
 import com.dpw.runner.shipment.services.commons.constants.EventConstants;
+import com.dpw.runner.shipment.services.commons.constants.MasterDataConstants;
+import com.dpw.runner.shipment.services.commons.constants.PermissionConstants;
+import com.dpw.runner.shipment.services.commons.enums.DBOperationType;
+import com.dpw.runner.shipment.services.commons.requests.AuditLogMetaData;
+import com.dpw.runner.shipment.services.commons.requests.CommonGetRequest;
+import com.dpw.runner.shipment.services.commons.requests.CommonRequestModel;
 import com.dpw.runner.shipment.services.commons.requests.ListCommonRequest;
 import com.dpw.runner.shipment.services.commons.responses.IRunnerResponse;
+import com.dpw.runner.shipment.services.config.CustomKeyGenerator;
 import com.dpw.runner.shipment.services.dao.interfaces.IAwbDao;
 import com.dpw.runner.shipment.services.dao.interfaces.IConsoleShipmentMappingDao;
 import com.dpw.runner.shipment.services.dao.interfaces.IConsolidationDetailsDao;
 import com.dpw.runner.shipment.services.dao.interfaces.IContainerDao;
 import com.dpw.runner.shipment.services.dao.interfaces.IEventDao;
 import com.dpw.runner.shipment.services.dao.interfaces.INetworkTransferDao;
+import com.dpw.runner.shipment.services.dao.interfaces.INotificationDao;
 import com.dpw.runner.shipment.services.dao.interfaces.IPackingDao;
 import com.dpw.runner.shipment.services.dao.interfaces.IPartiesDao;
+import com.dpw.runner.shipment.services.dao.interfaces.IReferenceNumbersDao;
 import com.dpw.runner.shipment.services.dao.interfaces.IRoutingsDao;
 import com.dpw.runner.shipment.services.dao.interfaces.IShipmentDao;
+import com.dpw.runner.shipment.services.dao.interfaces.IShipmentSettingsDao;
+import com.dpw.runner.shipment.services.dao.interfaces.IShipmentsContainersMappingDao;
+import com.dpw.runner.shipment.services.dao.interfaces.ITruckDriverDetailsDao;
 import com.dpw.runner.shipment.services.dto.CalculationAPIsDto.CalculatePackUtilizationRequest;
+import com.dpw.runner.shipment.services.dto.CalculationAPIsDto.ConsoleCalculationsRequest;
+import com.dpw.runner.shipment.services.dto.CalculationAPIsDto.ConsoleCalculationsResponse;
+import com.dpw.runner.shipment.services.dto.CalculationAPIsDto.ShipmentGridChangeResponse;
+import com.dpw.runner.shipment.services.dto.CalculationAPIsDto.ShipmentMeasurementDetailsDto;
+import com.dpw.runner.shipment.services.dto.GeneralAPIRequests.VolumeWeightChargeable;
+import com.dpw.runner.shipment.services.dto.request.ConsolidationDetailsRequest;
 import com.dpw.runner.shipment.services.dto.request.EmailTemplatesRequest;
 import com.dpw.runner.shipment.services.dto.request.EventsRequest;
 import com.dpw.runner.shipment.services.dto.request.LogHistoryRequest;
+import com.dpw.runner.shipment.services.dto.request.PartiesRequest;
+import com.dpw.runner.shipment.services.dto.request.ReferenceNumbersRequest;
+import com.dpw.runner.shipment.services.dto.request.RoutingsRequest;
 import com.dpw.runner.shipment.services.dto.request.ShipmentAttachDetachV3Request;
+import com.dpw.runner.shipment.services.dto.request.TruckDriverDetailsRequest;
+import com.dpw.runner.shipment.services.dto.response.AchievedQuantitiesResponse;
+import com.dpw.runner.shipment.services.dto.response.AllocationsResponse;
+import com.dpw.runner.shipment.services.dto.response.ConsolidationDetailsResponse;
+import com.dpw.runner.shipment.services.dto.response.ContainerResponse;
+import com.dpw.runner.shipment.services.dto.response.FieldClassDto;
+import com.dpw.runner.shipment.services.dto.response.PackingResponse;
+import com.dpw.runner.shipment.services.dto.response.TruckDriverDetailsResponse;
+import com.dpw.runner.shipment.services.dto.trackingservice.UniversalTrackingPayload;
 import com.dpw.runner.shipment.services.dto.v1.response.V1TenantSettingsResponse;
+import com.dpw.runner.shipment.services.dto.v1.response.WareHouseResponse;
+import com.dpw.runner.shipment.services.entity.AchievedQuantities;
 import com.dpw.runner.shipment.services.entity.AdditionalDetails;
+import com.dpw.runner.shipment.services.entity.Allocations;
+import com.dpw.runner.shipment.services.entity.ArrivalDepartureDetails;
 import com.dpw.runner.shipment.services.entity.Awb;
+import com.dpw.runner.shipment.services.entity.CarrierDetails;
 import com.dpw.runner.shipment.services.entity.ConsoleShipmentMapping;
 import com.dpw.runner.shipment.services.entity.ConsolidationDetails;
 import com.dpw.runner.shipment.services.entity.Containers;
@@ -44,35 +92,72 @@ import com.dpw.runner.shipment.services.entity.Events;
 import com.dpw.runner.shipment.services.entity.NetworkTransfer;
 import com.dpw.runner.shipment.services.entity.Packing;
 import com.dpw.runner.shipment.services.entity.Parties;
+import com.dpw.runner.shipment.services.entity.ReferenceNumbers;
 import com.dpw.runner.shipment.services.entity.Routings;
 import com.dpw.runner.shipment.services.entity.ShipmentDetails;
 import com.dpw.runner.shipment.services.entity.ShipmentSettingsDetails;
+import com.dpw.runner.shipment.services.entity.ShipmentsContainersMapping;
+import com.dpw.runner.shipment.services.entity.TenantProducts;
 import com.dpw.runner.shipment.services.entity.TriangulationPartner;
+import com.dpw.runner.shipment.services.entity.TruckDriverDetails;
+import com.dpw.runner.shipment.services.entity.commons.BaseEntity;
 import com.dpw.runner.shipment.services.entity.enums.AwbStatus;
+import com.dpw.runner.shipment.services.entity.enums.CarrierBookingStatus;
+import com.dpw.runner.shipment.services.entity.enums.IntegrationType;
+import com.dpw.runner.shipment.services.entity.enums.LoggerEvent;
 import com.dpw.runner.shipment.services.entity.enums.NetworkTransferStatus;
+import com.dpw.runner.shipment.services.entity.enums.ProductProcessTypes;
 import com.dpw.runner.shipment.services.entity.enums.RoutingCarriage;
 import com.dpw.runner.shipment.services.entity.enums.ShipmentRequestedType;
+import com.dpw.runner.shipment.services.entitytransfer.dto.EntityTransferCarrier;
+import com.dpw.runner.shipment.services.entitytransfer.dto.EntityTransferCommodityType;
+import com.dpw.runner.shipment.services.entitytransfer.dto.EntityTransferContainerType;
+import com.dpw.runner.shipment.services.entitytransfer.dto.EntityTransferCurrency;
+import com.dpw.runner.shipment.services.entitytransfer.dto.EntityTransferDGSubstance;
+import com.dpw.runner.shipment.services.entitytransfer.dto.EntityTransferMasterLists;
+import com.dpw.runner.shipment.services.entitytransfer.dto.EntityTransferUnLocations;
+import com.dpw.runner.shipment.services.entitytransfer.dto.EntityTransferVessels;
 import com.dpw.runner.shipment.services.exception.exceptions.RunnerException;
 import com.dpw.runner.shipment.services.exception.exceptions.ValidationException;
+import com.dpw.runner.shipment.services.helpers.DependentServiceHelper;
 import com.dpw.runner.shipment.services.helpers.JsonHelper;
+import com.dpw.runner.shipment.services.helpers.LoggerHelper;
 import com.dpw.runner.shipment.services.helpers.ResponseHelper;
+import com.dpw.runner.shipment.services.kafka.dto.KafkaResponse;
+import com.dpw.runner.shipment.services.kafka.producer.KafkaProducer;
 import com.dpw.runner.shipment.services.masterdata.dto.CarrierMasterData;
+import com.dpw.runner.shipment.services.masterdata.dto.request.MasterListRequest;
+import com.dpw.runner.shipment.services.masterdata.dto.request.MasterListRequestV2;
 import com.dpw.runner.shipment.services.masterdata.response.UnlocationsResponse;
+import com.dpw.runner.shipment.services.service.interfaces.IAuditLogService;
 import com.dpw.runner.shipment.services.service.interfaces.IConsolidationV3Service;
 import com.dpw.runner.shipment.services.service.interfaces.IContainerService;
 import com.dpw.runner.shipment.services.service.interfaces.IEventService;
 import com.dpw.runner.shipment.services.service.interfaces.ILogsHistoryService;
 import com.dpw.runner.shipment.services.service.interfaces.INetworkTransferService;
 import com.dpw.runner.shipment.services.service.interfaces.IPackingService;
+import com.dpw.runner.shipment.services.service.v1.IV1Service;
+import com.dpw.runner.shipment.services.service.v1.util.V1ServiceUtil;
 import com.dpw.runner.shipment.services.syncing.interfaces.IConsolidationSync;
 import com.dpw.runner.shipment.services.syncing.interfaces.IShipmentSync;
+import com.dpw.runner.shipment.services.utils.BookingIntegrationsUtility;
 import com.dpw.runner.shipment.services.utils.CommonUtils;
 import com.dpw.runner.shipment.services.utils.ConsolidationValidationUtil;
+import com.dpw.runner.shipment.services.utils.FieldUtils;
+import com.dpw.runner.shipment.services.utils.GetNextNumberHelper;
+import com.dpw.runner.shipment.services.utils.MasterDataKeyUtils;
 import com.dpw.runner.shipment.services.utils.MasterDataUtils;
+import com.dpw.runner.shipment.services.utils.NetworkTransferV3Util;
+import com.dpw.runner.shipment.services.utils.ProductIdentifierUtility;
 import com.dpw.runner.shipment.services.utils.StringUtility;
+import com.fasterxml.jackson.core.JsonProcessingException;
 import com.nimbusds.jose.util.Pair;
+import java.lang.reflect.InvocationTargetException;
+import java.math.BigDecimal;
+import java.math.RoundingMode;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.EnumMap;
 import java.util.HashMap;
@@ -82,15 +167,21 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
+import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.atomic.AtomicLong;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.ObjectUtils;
 import org.jetbrains.annotations.NotNull;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.cache.CacheManager;
+import org.springframework.context.annotation.Lazy;
 import org.springframework.dao.DataRetrievalFailureException;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
@@ -221,12 +312,6 @@ public class ConsolidationV3Service implements IConsolidationV3Service {
 
     @Autowired
     private GetNextNumberHelper getNextNumberHelper;
-
-    @Autowired
-    CacheManager cacheManager;
-
-    @Autowired
-    CustomKeyGenerator keyGenerator;
 
     @Override
     @Transactional
@@ -662,7 +747,8 @@ public class ConsolidationV3Service implements IConsolidationV3Service {
         return fetchUnlocationDataFuture;
     }
 
-    private void calculateAchievedValues(ConsolidationDetails consolidationDetails, ShipmentGridChangeResponse response, Set<ShipmentDetails> shipmentDetailsList) throws Exception {
+    private void calculateAchievedValues(ConsolidationDetails consolidationDetails, ShipmentGridChangeResponse response, Set<ShipmentDetails> shipmentDetailsList)
+            throws RunnerException {
         // Not to process the achieved values in case of AIR transport mode
         if(Constants.TRANSPORT_MODE_AIR.equalsIgnoreCase(consolidationDetails.getTransportMode())) {
             return;
@@ -760,24 +846,6 @@ public class ConsolidationV3Service implements IConsolidationV3Service {
         response.setSummaryConsolContainer(IReport.GetDPWWeightVolumeFormat(BigDecimal.valueOf(consoleCont), 0, v1TenantSettingsResponse));
         response.setSummaryShipmentTEU(IReport.GetDPWWeightVolumeFormat(BigDecimal.valueOf(shipmentTeu), 0, v1TenantSettingsResponse));
         response.setSummaryShipmentContainer(IReport.GetDPWWeightVolumeFormat(BigDecimal.valueOf(shipmentCont), 0, v1TenantSettingsResponse));
-    }
-
-    private Double getShipmentTeu(Containers containers, Double shipmentTeu, EntityTransferContainerType object) {
-        if(isShipmentListPresent(containers)) {
-            shipmentTeu = shipmentTeu + (containers.getContainerCount() * object.getTeu());
-        }
-        return shipmentTeu;
-    }
-
-    private long getShipmentCont(Containers containers, long shipmentCont) {
-        if(isShipmentListPresent(containers)) {
-            shipmentCont = shipmentCont + containers.getContainerCount();
-        }
-        return shipmentCont;
-    }
-
-    private boolean isShipmentListPresent(Containers containers) {
-        return containers.getShipmentsList() != null && containers.getShipmentsList().size() > 0;
     }
 
     public VolumeWeightChargeable calculateVolumeWeight(String transportMode, String weightUnit, String volumeUnit, BigDecimal weight, BigDecimal volume) throws RunnerException {
@@ -933,10 +1001,10 @@ public class ConsolidationV3Service implements IConsolidationV3Service {
         List<Containers> oldContainerList = oldEntity.getContainersList();
 
         Map<Long, String> oldContainerMap = oldContainerList.stream()
-                .collect(Collectors.toMap(Containers::getId, Containers::getContainerNumber));
+                .collect(toMap(Containers::getId, Containers::getContainerNumber));
 
         Map<Long, String> containerMap = containersList.stream()
-                .collect(Collectors.toMap(Containers::getId, Containers::getContainerNumber));
+                .collect(toMap(Containers::getId, Containers::getContainerNumber));
 
         List<Long> containerIds = new ArrayList<>();
         for(Long id : oldContainerMap.keySet()){
@@ -969,25 +1037,6 @@ public class ConsolidationV3Service implements IConsolidationV3Service {
         }
 
         return isMawbChange || isCarrierSpacChange;
-    }
-
-    private Object getEntityTransferObjectCache(Containers containers, Map<String, Object> cacheMap) {
-        Object cache = null;
-        if(cacheMap.isEmpty()) {
-            var resp = cacheManager.getCache(CacheConstants.CACHE_KEY_MASTER_DATA).get(keyGenerator.customCacheKeyForMasterData(CacheConstants.CONTAINER_TYPE, containers.getContainerCode()));
-            if(!Objects.isNull(resp)) cache = resp.get();
-        } else {
-            cache = cacheMap.get(containers.getContainerCode());
-        }
-        return cache;
-    }
-
-    private void processCacheAndContainerResponseList(ConsolidationDetails consolidationDetails, Set<String> containerTypes, Map<String, Map<String, String>> fieldNameKeyMap, Map<String, Object> cacheMap) {
-        List<ContainerResponse> containerResponseList = jsonHelper.convertValueToList(consolidationDetails.getContainersList(), ContainerResponse.class);
-        if (!Objects.isNull(containerResponseList))
-            containerResponseList.forEach(r -> containerTypes.addAll(masterDataUtils.createInBulkContainerTypeRequest(r, Containers.class, fieldNameKeyMap, Containers.class.getSimpleName() + r.getId(), cacheMap)));
-        Map<String, EntityTransferContainerType> v1Data = masterDataUtils.fetchInBulkContainerTypes(containerTypes);
-        masterDataUtils.pushToCache(v1Data, CacheConstants.CONTAINER_TYPE, containerTypes, new EntityTransferContainerType(), cacheMap);
     }
 
     private void checkCFSValidation(ConsolidationDetails consolidationDetails, Boolean isCreate, List<ShipmentDetails> shipmentDetails) throws RunnerException {
@@ -1053,11 +1102,6 @@ public class ConsolidationV3Service implements IConsolidationV3Service {
         }
     }
 
-    private boolean canSetChargableWeight(ConsolidationDetails consolidationDetails) {
-        return !IsStringNullOrEmpty(consolidationDetails.getContainerCategory()) && consolidationDetails.getContainerCategory().equals(Constants.SHIPMENT_TYPE_LCL)
-                && !IsStringNullOrEmpty(consolidationDetails.getTransportMode()) && consolidationDetails.getTransportMode().equals(Constants.TRANSPORT_MODE_SEA);
-    }
-
     private void setInterBranchContext(Boolean isInterBranchConsole) {
         if (Boolean.TRUE.equals(isInterBranchConsole))
             commonUtils.setInterBranchContextForHub();
@@ -1079,59 +1123,6 @@ public class ConsolidationV3Service implements IConsolidationV3Service {
         calculateAchievedValues(consolidationDetails, response, consolidationDetails.getShipmentsList());
 
         return response;
-    }
-
-    /**
-     * Handles calculation of achieved quantities such as weight, volume, chargeables, and allocations. Updates the response summary if applicable.
-     *
-     * @param consolidationDetails the consolidation details
-     * @param response             the response object to populate
-     * @param shipmentDetailsList  the set of shipments involved in this consolidation
-     * @throws RunnerException in case of unit conversion or settings issues
-     */
-    private void calculateAchievedValues(ConsolidationDetails consolidationDetails, ShipmentGridChangeResponse response, Set<ShipmentDetails> shipmentDetailsList)
-            throws RunnerException {
-        // Skip calculation for AIR mode or if overridden explicitly
-        if (Constants.TRANSPORT_MODE_AIR.equalsIgnoreCase(consolidationDetails.getTransportMode())
-                || Boolean.TRUE.equals(consolidationDetails.getOverride())) {
-            return;
-        }
-
-        ShipmentSettingsDetails shipmentSettingsDetails = commonUtils.getShipmentSettingFromContext();
-        V1TenantSettingsResponse v1TenantSettingsResponse = commonUtils.getCurrentTenantSettings();
-
-        // Fallback to default units if not specified
-        String weightChargeableUnit = IsStringNullOrEmpty(shipmentSettingsDetails.getWeightChargeableUnit()) ?
-                Constants.WEIGHT_UNIT_KG :
-                shipmentSettingsDetails.getWeightChargeableUnit();
-
-        String volumeChargeableUnit = IsStringNullOrEmpty(shipmentSettingsDetails.getVolumeChargeableUnit()) ?
-                Constants.VOLUME_UNIT_M3 :
-                shipmentSettingsDetails.getVolumeChargeableUnit();
-
-        // Aggregate total weight and volume from shipments
-        // TODO: SUBHAM Complete the use of gross variables
-        BigDecimal totalWeight = calculateTotalWeight(shipmentDetailsList, weightChargeableUnit);
-        BigDecimal totalGrossWeight = calculateTotalGrossWeight(shipmentDetailsList, weightChargeableUnit);
-        BigDecimal totalVolume = calculateTotalVolume(shipmentDetailsList, volumeChargeableUnit);
-        BigDecimal totalGrossVolume = calculateTotalGrossVolume(shipmentDetailsList, volumeChargeableUnit);
-
-        response.setSummaryShipmentsCount(Optional.ofNullable(shipmentDetailsList).map(Set::size).orElse(0));
-
-        // TEU (Twenty-foot Equivalent Unit) count for sea shipments
-        calculateConsoleShipmentTeuCount(consolidationDetails, response, v1TenantSettingsResponse);
-
-        // Update achieved weight & volume to consolidation
-        setAchievedQuantities(consolidationDetails, totalWeight, weightChargeableUnit, totalVolume, volumeChargeableUnit);
-
-        // Calculate utilization based on volume/weight fill percentage
-        consolidationDetails = calculateConsolUtilization(consolidationDetails);
-
-        // Compute and update chargeables & allocations
-        updateAllocationsAndChargeables(consolidationDetails, weightChargeableUnit, volumeChargeableUnit, totalWeight, totalVolume);
-
-        // Final step: populate user-facing summary in response
-        updateResponseSummary(consolidationDetails, response, totalWeight, v1TenantSettingsResponse, weightChargeableUnit, totalVolume, volumeChargeableUnit);
     }
 
     /**
@@ -1370,232 +1361,6 @@ public class ConsolidationV3Service implements IConsolidationV3Service {
     private boolean canSetChargableWeight(ConsolidationDetails consolidationDetails) {
         return Constants.SHIPMENT_TYPE_LCL.equals(consolidationDetails.getContainerCategory())
                 && Constants.TRANSPORT_MODE_SEA.equals(consolidationDetails.getTransportMode());
-    }
-
-    /**
-     * Calculates the chargeable weight based on the transport mode, actual weight, and volume.
-     * Applies volumetric weight factor logic depending on transport type (AIR, SEA, ROAD, etc.).
-     *
-     * @param transportMode The mode of transport (e.g., AIR, SEA, ROAD).
-     * @param weightUnit    Unit of actual weight provided (e.g., KG, LB).
-     * @param volumeUnit    Unit of volume provided (e.g., M3, CFT).
-     * @param weight        Actual weight value.
-     * @param volume        Actual volume value.
-     * @return VolumeWeightChargeable object containing chargeable and volume weight values.
-     * @throws RunnerException if unit conversion or calculation fails.
-     */
-    public VolumeWeightChargeable calculateVolumeWeight(String transportMode, String weightUnit, String volumeUnit, BigDecimal weight, BigDecimal volume) throws RunnerException {
-        try {
-            VolumeWeightChargeable vwOb = new VolumeWeightChargeable();
-
-            // Validate inputs
-            if (weightUnit.isEmpty() || volumeUnit.isEmpty() || transportMode.isEmpty()) {
-                return vwOb;
-            }
-
-            switch (transportMode) {
-                // Sea, Rail, and FSA transport types
-                case Constants.TRANSPORT_MODE_SEA:
-                case Constants.TRANSPORT_MODE_RAI:
-                case Constants.TRANSPORT_MODE_FSA: {
-                    // Convert volume to cubic meters
-                    BigDecimal volInM3 = new BigDecimal(convertUnit(Constants.VOLUME, volume, volumeUnit, Constants.VOLUME_UNIT_M3).toString());
-
-                    // Calculate chargeable volume (ceil to nearest 0.1)
-                    BigDecimal chargeable = volInM3.multiply(BigDecimal.TEN)
-                            .setScale(0, BigDecimal.ROUND_CEILING)
-                            .divide(BigDecimal.TEN);
-
-                    vwOb.setChargeable(chargeable);
-                    vwOb.setChargeableUnit(Constants.VOLUME_UNIT_M3);
-
-                    // Convert weight to tons (via KG)
-                    BigDecimal weightInKg = new BigDecimal(convertUnit(Constants.MASS, weight, weightUnit, Constants.WEIGHT_UNIT_KG).toString());
-                    BigDecimal weightInTons = weightInKg.divide(BigDecimal.valueOf(1000));
-
-                    // Convert weight (in tons) to volume equivalent in original volume unit
-                    BigDecimal volumeWeight = new BigDecimal(convertUnit(Constants.VOLUME, weightInTons, Constants.VOLUME_UNIT_M3, volumeUnit).toString());
-
-                    vwOb.setVolumeWeight(volumeWeight);
-                    vwOb.setVolumeWeightUnit(volumeUnit);
-                    break;
-                }
-
-                // Air, Road, FAS transport types
-                case Constants.TRANSPORT_MODE_AIR:
-                case Constants.TRANSPORT_MODE_FAS:
-                case Constants.TRANSPORT_MODE_ROA: {
-                    // Convert actual weight to KG
-                    BigDecimal weightInKg = new BigDecimal(convertUnit(Constants.MASS, weight, weightUnit, Constants.WEIGHT_UNIT_KG).toString());
-
-                    // Convert volume to M3
-                    BigDecimal volumeInM3 = new BigDecimal(convertUnit(Constants.VOLUME, volume, volumeUnit, Constants.VOLUME_UNIT_M3).toString());
-
-                    // Determine volumetric factor
-                    BigDecimal factor = BigDecimal.valueOf(AIR_FACTOR_FOR_VOL_WT);
-                    if (Constants.TRANSPORT_MODE_ROA.equals(transportMode)) {
-                        factor = BigDecimal.valueOf(ROAD_FACTOR_FOR_VOL_WT);
-                    }
-
-                    // Calculate volumetric weight in KG
-                    BigDecimal volumeWeightInKg = volumeInM3.multiply(factor);
-
-                    // Chargeable weight is max(actual weight, volumetric weight)
-                    BigDecimal chargeableWeight = weightInKg.max(volumeWeightInKg);
-
-                    // Round to 2 decimal places (ceil)
-                    BigDecimal chargeable = chargeableWeight.multiply(BigDecimal.valueOf(100))
-                            .setScale(0, BigDecimal.ROUND_CEILING)
-                            .divide(BigDecimal.valueOf(100));
-
-                    vwOb.setChargeable(chargeable);
-                    vwOb.setChargeableUnit(Constants.WEIGHT_UNIT_KG);
-
-                    // Convert volumetric weight (in KG) back to original weight unit
-                    BigDecimal volumeWeight = new BigDecimal(convertUnit(Constants.MASS, volumeWeightInKg, Constants.WEIGHT_UNIT_KG, weightUnit).toString());
-
-                    vwOb.setVolumeWeight(volumeWeight);
-                    vwOb.setVolumeWeightUnit(weightUnit);
-                    break;
-                }
-
-                // Unknown/unsupported mode
-                default:
-                    // Return empty chargeable object
-            }
-
-            return vwOb;
-
-        } catch (Exception e) {
-            String errorMsg = e.getMessage() != null ? e.getMessage() : DaoConstants.DAO_CALCULATION_ERROR;
-            log.error("Failed to calculate volume-weight chargeable: {}", errorMsg, e);
-            throw new RunnerException(errorMsg);
-        }
-    }
-
-    /**
-     * Calculates the weight and volume utilization for a consolidation based on allocations and achieved quantities.
-     *
-     * @param consolidationDetails the consolidation details object to be updated
-     * @return the updated consolidation details with utilization values
-     * @throws RunnerException if any exception occurs during calculation
-     */
-    private ConsolidationDetails calculateConsolUtilization(ConsolidationDetails consolidationDetails) throws RunnerException {
-        String responseMsg;
-        try {
-            if (consolidationDetails.getAllocations() == null) {
-                consolidationDetails.setAllocations(new Allocations());
-            }
-            if (consolidationDetails.getAchievedQuantities() == null) {
-                consolidationDetails.setAchievedQuantities(new AchievedQuantities());
-            }
-
-            // Calculate weight utilization
-            if (consolidationDetails.getAchievedQuantities().getConsolidatedWeightUnit() != null &&
-                    consolidationDetails.getAllocations().getWeightUnit() != null) {
-
-                BigDecimal consolidatedWeight = new BigDecimal(convertUnit(
-                        Constants.MASS,
-                        consolidationDetails.getAchievedQuantities().getConsolidatedWeight(),
-                        consolidationDetails.getAchievedQuantities().getConsolidatedWeightUnit(),
-                        Constants.WEIGHT_UNIT_KG
-                ).toString());
-
-                BigDecimal allocatedWeight = new BigDecimal(convertUnit(
-                        Constants.MASS,
-                        consolidationDetails.getAllocations().getWeight(),
-                        consolidationDetails.getAllocations().getWeightUnit(),
-                        Constants.WEIGHT_UNIT_KG
-                ).toString());
-
-                if (Objects.equals(allocatedWeight, BigDecimal.ZERO)) {
-                    consolidationDetails.getAchievedQuantities().setWeightUtilization("0");
-                } else {
-                    BigDecimal utilization = consolidatedWeight.divide(allocatedWeight, 4, BigDecimal.ROUND_HALF_UP)
-                            .multiply(BigDecimal.valueOf(100));
-                    consolidationDetails.getAchievedQuantities().setWeightUtilization(String.valueOf(utilization.doubleValue()));
-                }
-            }
-
-            // Calculate volume utilization
-            if (consolidationDetails.getAchievedQuantities().getConsolidatedVolumeUnit() != null &&
-                    consolidationDetails.getAllocations().getVolumeUnit() != null) {
-
-                BigDecimal consolidatedVolume = new BigDecimal(convertUnit(
-                        Constants.VOLUME,
-                        consolidationDetails.getAchievedQuantities().getConsolidatedVolume(),
-                        consolidationDetails.getAchievedQuantities().getConsolidatedVolumeUnit(),
-                        Constants.VOLUME_UNIT_M3
-                ).toString());
-
-                BigDecimal allocatedVolume = new BigDecimal(convertUnit(
-                        Constants.VOLUME,
-                        consolidationDetails.getAllocations().getVolume(),
-                        consolidationDetails.getAllocations().getVolumeUnit(),
-                        Constants.VOLUME_UNIT_M3
-                ).toString());
-
-                if (Objects.equals(allocatedVolume, BigDecimal.ZERO)) {
-                    consolidationDetails.getAchievedQuantities().setVolumeUtilization("0");
-                } else {
-                    BigDecimal utilization = consolidatedVolume.divide(allocatedVolume, 4, BigDecimal.ROUND_HALF_UP)
-                            .multiply(BigDecimal.valueOf(100));
-                    consolidationDetails.getAchievedQuantities().setVolumeUtilization(String.valueOf(utilization.doubleValue()));
-                }
-            }
-
-            return consolidationDetails;
-
-        } catch (Exception e) {
-            responseMsg = e.getMessage() != null ? e.getMessage() : DaoConstants.DAO_CALCULATION_ERROR;
-            log.error(responseMsg, e);
-            throw new RunnerException(responseMsg);
-        }
-    }
-
-    /**
-     * Calculates and sets the container and TEU counts for both console and shipment in the response.
-     *
-     * @param consolidationDetails     consolidation data including container list
-     * @param response                 response object to populate TEU and container summaries
-     * @param v1TenantSettingsResponse tenant settings for formatting
-     */
-    private void calculateConsoleShipmentTeuCount(ConsolidationDetails consolidationDetails,
-            ShipmentGridChangeResponse response,
-            V1TenantSettingsResponse v1TenantSettingsResponse) {
-
-        double consoleTeu = 0.0;
-        double shipmentTeu = 0.0;
-        long consoleCont = 0L;
-        long shipmentCont = 0L;
-
-        if (consolidationDetails.getContainersList() != null && !consolidationDetails.getContainersList().isEmpty()) {
-            Map<String, Object> cacheMap = new HashMap<>();
-            Map<String, Map<String, String>> fieldNameKeyMap = new HashMap<>();
-            Set<String> containerTypes = new HashSet<>();
-
-            processCacheAndContainerResponseList(consolidationDetails, containerTypes, fieldNameKeyMap, cacheMap);
-
-            for (Containers containers : consolidationDetails.getContainersList()) {
-                Object cache = getEntityTransferObjectCache(containers, cacheMap);
-                EntityTransferContainerType typeData = (EntityTransferContainerType) cache;
-
-                if (containers.getContainerCount() != null) {
-                    consoleCont += containers.getContainerCount();
-                    shipmentCont = getShipmentCont(containers, shipmentCont);
-
-                    if (typeData != null && typeData.getTeu() != null) {
-                        consoleTeu += containers.getContainerCount() * typeData.getTeu();
-                        shipmentTeu = getShipmentTeu(containers, shipmentTeu, typeData);
-                    }
-                }
-            }
-        }
-
-        response.setSummaryConsoleTEU(IReport.GetDPWWeightVolumeFormat(BigDecimal.valueOf(consoleTeu), 0, v1TenantSettingsResponse));
-        response.setSummaryConsolContainer(IReport.GetDPWWeightVolumeFormat(BigDecimal.valueOf(consoleCont), 0, v1TenantSettingsResponse));
-        response.setSummaryShipmentTEU(IReport.GetDPWWeightVolumeFormat(BigDecimal.valueOf(shipmentTeu), 0, v1TenantSettingsResponse));
-        response.setSummaryShipmentContainer(IReport.GetDPWWeightVolumeFormat(BigDecimal.valueOf(shipmentCont), 0, v1TenantSettingsResponse));
     }
 
     /**
@@ -2065,7 +1830,7 @@ public class ConsolidationV3Service implements IConsolidationV3Service {
         return networkTransferDao.getInterConsoleNTList(shipmentIds, Constants.SHIPMENT).stream()
                 .collect(Collectors.groupingBy(
                         NetworkTransfer::getEntityId,
-                        Collectors.toMap(NetworkTransfer::getTenantId, transfer -> transfer)
+                        toMap(NetworkTransfer::getTenantId, transfer -> transfer)
                 ));
     }
 
@@ -2735,7 +2500,7 @@ public class ConsolidationV3Service implements IConsolidationV3Service {
 
         return interBranchShipmentDetailsList.stream()
                 .filter(shipment -> DIRECTION_IMP.equalsIgnoreCase(shipment.getDirection()))
-                .collect(Collectors.toMap(
+                .collect(toMap(
                         ShipmentDetails::getId,   // Key: ID of the shipment
                         shipment -> shipment      // Value: ShipmentDetails object itself
                 ));
@@ -2841,7 +2606,7 @@ public class ConsolidationV3Service implements IConsolidationV3Service {
     }
 
     private void fetchTruckerInfo(Long id, ConsolidationDetailsResponse consolidationDetailsResponse) {
-        List<Long> shipmentIds = consoleShipmentMappingDao.findByConsolidationId(id).stream().map(ConsoleShipmentMapping::getShipmentId).collect(toList());
+        List<Long> shipmentIds = consoleShipmentMappingDao.findByConsolidationId(id).stream().map(ConsoleShipmentMapping::getShipmentId).toList();
         List<TruckDriverDetailsResponse> truckingInfo = new ArrayList<>();
         if (!shipmentIds.isEmpty()) {
             ListCommonRequest listCommonRequest = constructListCommonRequest("shipmentId", shipmentIds, "IN");
@@ -2855,8 +2620,9 @@ public class ConsolidationV3Service implements IConsolidationV3Service {
                 var map = shipmentDetailsPage.getContent().stream().collect(toMap(ShipmentDetails::getId, ShipmentDetails::getShipmentId));
                 List<ContainerResponse> containers = consolidationDetailsResponse.getContainersList();
                 Map<Long, ContainerResponse> contMap = new HashMap<>();
-                if(containers != null)
-                    contMap = containers.stream().collect(Collectors.toMap(ContainerResponse::getId, Function.identity()));
+                if (containers != null) {
+                    contMap = containers.stream().collect(toMap(ContainerResponse::getId, Function.identity()));
+                }
                 Map<Long, ContainerResponse> finalContMap = contMap;
                 truckDriverDetails.forEach(truckDriverDetail -> {
                     var details = jsonHelper.convertValue(truckDriverDetail, TruckDriverDetailsResponse.class);
@@ -3058,7 +2824,8 @@ public class ConsolidationV3Service implements IConsolidationV3Service {
         List<String> includeColumns = FieldUtils.getMasterDataAnnotationFields(List.of(createFieldClassDto(ConsolidationDetails.class, null), createFieldClassDto(ArrivalDepartureDetails.class, "arrivalDetails."), createFieldClassDto(ArrivalDepartureDetails.class, "departureDetails.")));
         includeColumns.addAll(FieldUtils.getTenantIdAnnotationFields(List.of(createFieldClassDto(ConsolidationDetails.class, null))));
         includeColumns.addAll(ConsolidationConstants.LIST_INCLUDE_COLUMNS);
-        ConsolidationDetailsResponse consolidationDetailsResponse = (ConsolidationDetailsResponse) commonUtils.setIncludedFieldsToResponse(consolidationDetails, includeColumns, new ConsolidationDetailsResponse());
+        ConsolidationDetailsResponse consolidationDetailsResponse = (ConsolidationDetailsResponse) commonUtils.setIncludedFieldsToResponse(consolidationDetails,
+                includeColumns.stream().collect(Collectors.toSet()), new ConsolidationDetailsResponse());
         log.info("Total time taken in setting consol details response {}", (System.currentTimeMillis() - start));
         return fetchAllMasterDataByKey(consolidationDetails, consolidationDetailsResponse);
     }
